Few tests - dmesg-warn/dmesg-fail - WARNING: .* at drivers/gpu/drm/xe/xe_guc_submit.c:.* xe_guc_sched_done_handler
<6> [248.020935] Console: switching to colour dummy device 80x25
<6> [248.021150] [IGT] xe_exec_threads: executing
<6> [248.026056] [IGT] xe_exec_threads: starting subtest threads-cm-shared-vm-userptr-invalidate
<7> [248.065641] xe 0000:00:02.0: [drm:xe_gt_suspend [xe]] GT0: suspending
<7> [248.066354] xe 0000:00:02.0: [drm:xe_gt_suspend [xe]] GT0: suspended
<4> [251.342196] ------------[ cut here ]------------
<4> [251.342212] xe 0000:03:00.0: [drm] Assertion `exec_queue_destroyed(q)` failed!
platform: DG2 subplatform: 6
graphics: Xe_HPG 12.55 step A1
media: Xe_HPM 12.55 step A1
tile: 0 VRAM 6.00 GiB
GT: 0 type 1
<4> [251.342292] WARNING: CPU: 18 PID: 2640 at drivers/gpu/drm/xe/xe_guc_submit.c:1826 xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.342615] Modules linked in: snd_hda_intel snd_hda_codec_hdmi mei_gsc xe drm_gpuvm i2c_algo_bit drm_ttm_helper ttm gpu_sched drm_suballoc_helper drm_exec drm_display_helper drm_kunit_helpers drm_kms_helper drm_buddy kunit overlay binfmt_misc intel_rapl_msr intel_rapl_common intel_uncore_frequency intel_uncore_frequency_common x86_pkg_temp_thermal intel_powerclamp snd_sof_pci_intel_tgl snd_sof_pci_intel_cnl joydev coretemp snd_sof_intel_hda_generic snd_sof_pci snd_sof_xtensa_dsp snd_sof_intel_hda_common cmdlinepart snd_soc_hdac_hda snd_sof_intel_hda snd_sof spi_nor mei_hdcp mei_pxp snd_sof_utils hid_generic kvm_intel mtd snd_soc_acpi_intel_match mxm_wmi snd_soc_acpi wmi_bmof kvm nls_iso8859_1 snd_intel_dspcfg snd_hda_codec crct10dif_pclmul snd_hwdep crc32_pclmul polyval_clmulni polyval_generic snd_sof_intel_hda_mlink snd_hda_ext_core ghash_clmulni_intel sha512_ssse3 snd_hda_core sha256_ssse3 sha1_ssse3 snd_soc_core aesni_intel snd_compress crypto_simd cryptd snd_pcm usbhid video mei_me snd_timer hid rapl intel_cstate
<4> [251.342891] igc snd spi_intel_pci i2c_i801 intel_pmc_core soundcore mei spi_intel i2c_smbus intel_vsec pmt_telemetry pinctrl_alderlake pmt_class wmi acpi_tad acpi_pad mac_hid sch_fq_codel dm_multipath msr drm efi_pstore nfnetlink ip_tables x_tables autofs4 [last unloaded: snd_hda_intel]
<4> [251.342995] CPU: 18 UID: 0 PID: 2640 Comm: kworker/u80:94 Not tainted 6.12.0-rc4-xe #1
<4> [251.343005] Hardware name: Micro-Star International Co., Ltd. MS-7D25/PRO Z690-A DDR4(MS-7D25), BIOS 1.10 12/13/2021
<4> [251.343013] Workqueue: xe-g2h-wq g2h_worker_func [xe]
<4> [251.343295] RIP: 0010:xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.343593] Code: c7 c1 b7 69 f2 a0 50 4c 8b 8d 60 ff ff ff 41 51 44 8b 8d 70 ff ff ff 4c 8b 85 58 ff ff ff 48 8b 95 50 ff ff ff e8 5c 33 4c e0 <0f> 0b 4c 8b ab 58 ed ff ff 49 8b 44 24 70 48 83 c4 60 e9 01 f7 ff
<4> [251.343602] RSP: 0018:ffffc90002ae7c08 EFLAGS: 00010286
<4> [251.343614] RAX: 0000000000000000 RBX: ffff88814fec92d0 RCX: 0000000000000027
<4> [251.343622] RDX: ffff88888f721a08 RSI: 0000000000000001 RDI: ffff88888f721a00
<4> [251.343629] RBP: ffffc90002ae7d20 R08: 0000000000000000 R09: 0000000000000003
<4> [251.343636] R10: ffffc90002ae7a58 R11: ffff8888afaa0cb8 R12: ffff888107e10a00
<4> [251.343643] R13: 0000000000000037 R14: ffff88814d4b0000 R15: ffffc90002ae7ce6
<4> [251.343650] FS: 0000000000000000(0000) GS:ffff88888f700000(0000) knlGS:0000000000000000
<4> [251.343658] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [251.343666] CR2: 00007080eadd4860 CR3: 0000000003256000 CR4: 0000000000752ef0
<4> [251.343674] PKRU: 55555554
<4> [251.343680] Call Trace:
<4> [251.343686] <TASK>
<4> [251.343696] ? show_regs+0x64/0x70
<4> [251.343714] ? __warn+0x93/0x1a0
<4> [251.343730] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.344032] ? report_bug+0x171/0x1a0
<4> [251.344057] ? handle_bug+0x60/0xa0
<4> [251.344073] ? exc_invalid_op+0x18/0x70
<4> [251.344089] ? asm_exc_invalid_op+0x1b/0x20
<4> [251.344123] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.344439] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.344746] ? lock_acquire+0xc5/0x2f0
<4> [251.344784] dequeue_one_g2h+0x51a/0x830 [xe]
<4> [251.345066] ? lock_release+0xd4/0x2a0
<4> [251.345081] ? receive_g2h+0x47/0xf0 [xe]
<4> [251.345366] receive_g2h+0x4f/0xf0 [xe]
<4> [251.345779] g2h_worker_func+0x15/0x20 [xe]
<4> [251.346055] process_one_work+0x21c/0x730
<4> [251.346091] worker_thread+0x1db/0x3a0
<4> [251.346110] ? __pfx_worker_thread+0x10/0x10
<4> [251.346124] kthread+0xf3/0x130
<4> [251.346142] ? __pfx_kthread+0x10/0x10
<4> [251.346162] ret_from_fork+0x3a/0x60
<4> [251.346176] ? __pfx_kthread+0x10/0x10
<4> [251.346194] ret_from_fork_asm+0x1a/0x30
<4> [251.346234] </TASK>
<4> [251.346242] irq event stamp: 31345
<4> [251.346251] hardirqs last enabled at (31351): [<ffffffff811bcec8>] __up_console_sem+0x68/0x80
<4> [251.346272] hardirqs last disabled at (31356): [<ffffffff811bcead>] __up_console_sem+0x4d/0x80
<4> [251.346288] softirqs last enabled at (31280): [<ffffffff810f874d>] __irq_exit_rcu+0x7d/0xa0
<4> [251.346301] softirqs last disabled at (31207): [<ffffffff810f874d>] __irq_exit_rcu+0x7d/0xa0
<4> [251.346312] ---[ end trace 0000000000000000 ]---
<4> [251.346822] ------------[ cut here ]------------
<4> [251.346837] xe 0000:03:00.0: [drm] Assertion `exec_queue_destroyed(q)` failed!
platform: DG2 subplatform: 6
graphics: Xe_HPG 12.55 step A1
media: Xe_HPM 12.55 step A1
tile: 0 VRAM 6.00 GiB
GT: 0 type 1
<4> [251.346915] WARNING: CPU: 17 PID: 2640 at drivers/gpu/drm/xe/xe_guc_submit.c:1826 xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.347285] Modules linked in: snd_hda_intel snd_hda_codec_hdmi mei_gsc xe drm_gpuvm i2c_algo_bit drm_ttm_helper ttm gpu_sched drm_suballoc_helper drm_exec drm_display_helper drm_kunit_helpers drm_kms_helper drm_buddy kunit overlay binfmt_misc intel_rapl_msr intel_rapl_common intel_uncore_frequency intel_uncore_frequency_common x86_pkg_temp_thermal intel_powerclamp snd_sof_pci_intel_tgl snd_sof_pci_intel_cnl joydev coretemp snd_sof_intel_hda_generic snd_sof_pci snd_sof_xtensa_dsp snd_sof_intel_hda_common cmdlinepart snd_soc_hdac_hda snd_sof_intel_hda snd_sof spi_nor mei_hdcp mei_pxp snd_sof_utils hid_generic kvm_intel mtd snd_soc_acpi_intel_match mxm_wmi snd_soc_acpi wmi_bmof kvm nls_iso8859_1 snd_intel_dspcfg snd_hda_codec crct10dif_pclmul snd_hwdep crc32_pclmul polyval_clmulni polyval_generic snd_sof_intel_hda_mlink snd_hda_ext_core ghash_clmulni_intel sha512_ssse3 snd_hda_core sha256_ssse3 sha1_ssse3 snd_soc_core aesni_intel snd_compress crypto_simd cryptd snd_pcm usbhid video mei_me snd_timer hid rapl intel_cstate
<4> [251.347567] igc snd spi_intel_pci i2c_i801 intel_pmc_core soundcore mei spi_intel i2c_smbus intel_vsec pmt_telemetry pinctrl_alderlake pmt_class wmi acpi_tad acpi_pad mac_hid sch_fq_codel dm_multipath msr drm efi_pstore nfnetlink ip_tables x_tables autofs4 [last unloaded: snd_hda_intel]
<4> [251.347670] CPU: 17 UID: 0 PID: 2640 Comm: kworker/u80:94 Tainted: G W 6.12.0-rc4-xe #1
<4> [251.347682] Tainted: [W]=WARN
<4> [251.347688] Hardware name: Micro-Star International Co., Ltd. MS-7D25/PRO Z690-A DDR4(MS-7D25), BIOS 1.10 12/13/2021
<4> [251.347695] Workqueue: xe-g2h-wq g2h_worker_func [xe]
<4> [251.347963] RIP: 0010:xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.348257] Code: c7 c1 b7 69 f2 a0 50 4c 8b 8d 60 ff ff ff 41 51 44 8b 8d 70 ff ff ff 4c 8b 85 58 ff ff ff 48 8b 95 50 ff ff ff e8 5c 33 4c e0 <0f> 0b 4c 8b ab 58 ed ff ff 49 8b 44 24 70 48 83 c4 60 e9 01 f7 ff
<4> [251.348266] RSP: 0018:ffffc90002ae7c08 EFLAGS: 00010286
<4> [251.348278] RAX: 0000000000000000 RBX: ffff88814fec92d0 RCX: 0000000000014211
<4> [251.348286] RDX: 0000000000000000 RSI: 0000000100004211 RDI: 0000000000000001
<4> [251.348293] RBP: ffffc90002ae7d20 R08: 0000000000000000 R09: 0000000000000003
<4> [251.348301] R10: ffffc90002ae7a58 R11: ffff8888afaa1198 R12: ffff888115744c00
<4> [251.348308] R13: 0000000000000037 R14: ffff88814d4b0000 R15: ffffc90002ae7ce6
<4> [251.348315] FS: 0000000000000000(0000) GS:ffff88888f680000(0000) knlGS:0000000000000000
<4> [251.348324] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [251.348332] CR2: 00007100eadd2460 CR3: 0000000003256000 CR4: 0000000000752ef0
<4> [251.348339] PKRU: 55555554
<4> [251.348345] Call Trace:
<4> [251.348351] <TASK>
<4> [251.348360] ? show_regs+0x64/0x70
<4> [251.348377] ? __warn+0x93/0x1a0
<4> [251.348393] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.348697] ? report_bug+0x171/0x1a0
<4> [251.348719] ? handle_bug+0x60/0xa0
<4> [251.348732] ? exc_invalid_op+0x18/0x70
<4> [251.348746] ? asm_exc_invalid_op+0x1b/0x20
<4> [251.348776] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.349075] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.349401] ? lock_acquire+0xc5/0x2f0
<4> [251.349444] dequeue_one_g2h+0x51a/0x830 [xe]
<4> [251.349841] ? lock_release+0xd4/0x2a0
<4> [251.349862] ? receive_g2h+0x47/0xf0 [xe]
<4> [251.350205] receive_g2h+0x4f/0xf0 [xe]
<4> [251.350528] g2h_worker_func+0x15/0x20 [xe]
<4> [251.350846] process_one_work+0x21c/0x730
<4> [251.350879] worker_thread+0x1db/0x3a0
<4> [251.350897] ? __pfx_worker_thread+0x10/0x10
<4> [251.350910] kthread+0xf3/0x130
<4> [251.350926] ? __pfx_kthread+0x10/0x10
<4> [251.350945] ret_from_fork+0x3a/0x60
<4> [251.350957] ? __pfx_kthread+0x10/0x10
<4> [251.350973] ret_from_fork_asm+0x1a/0x30
<4> [251.351010] </TASK>
<4> [251.351017] irq event stamp: 32325
<4> [251.351024] hardirqs last enabled at (32331): [<ffffffff811bcec8>] __up_console_sem+0x68/0x80
<4> [251.351043] hardirqs last disabled at (32336): [<ffffffff811bcead>] __up_console_sem+0x4d/0x80
<4> [251.351058] softirqs last enabled at (32242): [<ffffffff810f874d>] __irq_exit_rcu+0x7d/0xa0
<4> [251.351069] softirqs last disabled at (32221): [<ffffffff810f874d>] __irq_exit_rcu+0x7d/0xa0
<4> [251.351078] ---[ end trace 0000000000000000 ]---
<4> [251.352044] ------------[ cut here ]------------
<4> [251.352057] xe 0000:03:00.0: [drm] Assertion `exec_queue_destroyed(q)` failed!
platform: DG2 subplatform: 6
graphics: Xe_HPG 12.55 step A1
media: Xe_HPM 12.55 step A1
tile: 0 VRAM 6.00 GiB
GT: 0 type 1
<4> [251.352103] WARNING: CPU: 11 PID: 2640 at drivers/gpu/drm/xe/xe_guc_submit.c:1826 xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.352395] Modules linked in: snd_hda_intel snd_hda_codec_hdmi mei_gsc xe drm_gpuvm i2c_algo_bit drm_ttm_helper ttm gpu_sched drm_suballoc_helper drm_exec drm_display_helper drm_kunit_helpers drm_kms_helper drm_buddy kunit overlay binfmt_misc intel_rapl_msr intel_rapl_common intel_uncore_frequency intel_uncore_frequency_common x86_pkg_temp_thermal intel_powerclamp snd_sof_pci_intel_tgl snd_sof_pci_intel_cnl joydev coretemp snd_sof_intel_hda_generic snd_sof_pci snd_sof_xtensa_dsp snd_sof_intel_hda_common cmdlinepart snd_soc_hdac_hda snd_sof_intel_hda snd_sof spi_nor mei_hdcp mei_pxp snd_sof_utils hid_generic kvm_intel mtd snd_soc_acpi_intel_match mxm_wmi snd_soc_acpi wmi_bmof kvm nls_iso8859_1 snd_intel_dspcfg snd_hda_codec crct10dif_pclmul snd_hwdep crc32_pclmul polyval_clmulni polyval_generic snd_sof_intel_hda_mlink snd_hda_ext_core ghash_clmulni_intel sha512_ssse3 snd_hda_core sha256_ssse3 sha1_ssse3 snd_soc_core aesni_intel snd_compress crypto_simd cryptd snd_pcm usbhid video mei_me snd_timer hid rapl intel_cstate
<4> [251.352598] igc snd spi_intel_pci i2c_i801 intel_pmc_core soundcore mei spi_intel i2c_smbus intel_vsec pmt_telemetry pinctrl_alderlake pmt_class wmi acpi_tad acpi_pad mac_hid sch_fq_codel dm_multipath msr drm efi_pstore nfnetlink ip_tables x_tables autofs4 [last unloaded: snd_hda_intel]
<4> [251.352672] CPU: 11 UID: 0 PID: 2640 Comm: kworker/u80:94 Tainted: G W 6.12.0-rc4-xe #1
<4> [251.352683] Tainted: [W]=WARN
<4> [251.352687] Hardware name: Micro-Star International Co., Ltd. MS-7D25/PRO Z690-A DDR4(MS-7D25), BIOS 1.10 12/13/2021
<4> [251.352692] Workqueue: xe-g2h-wq g2h_worker_func [xe]
<4> [251.352891] RIP: 0010:xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.353093] Code: c7 c1 b7 69 f2 a0 50 4c 8b 8d 60 ff ff ff 41 51 44 8b 8d 70 ff ff ff 4c 8b 85 58 ff ff ff 48 8b 95 50 ff ff ff e8 5c 33 4c e0 <0f> 0b 4c 8b ab 58 ed ff ff 49 8b 44 24 70 48 83 c4 60 e9 01 f7 ff
<4> [251.353099] RSP: 0018:ffffc90002ae7c08 EFLAGS: 00010286
<4> [251.353108] RAX: 0000000000000000 RBX: ffff88814fec92d0 RCX: 0000000000000027
<4> [251.353114] RDX: ffff88888f3a1a08 RSI: 0000000000000001 RDI: ffff88888f3a1a00
<4> [251.353119] RBP: ffffc90002ae7d20 R08: 0000000000000000 R09: 0000000000000003
<4> [251.353123] R10: ffffc90002ae7a58 R11: ffff8888afaa1690 R12: ffff88812765b400
<4> [251.353128] R13: 0000000000000037 R14: ffff88814d4b0000 R15: ffffc90002ae7ce6
<4> [251.353133] FS: 0000000000000000(0000) GS:ffff88888f380000(0000) knlGS:0000000000000000
<4> [251.353139] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [251.353144] CR2: 00007000eadcdc60 CR3: 0000000003256000 CR4: 0000000000752ef0
<4> [251.353149] PKRU: 55555554
<4> [251.353153] Call Trace:
<4> [251.353157] <TASK>
<4> [251.353164] ? show_regs+0x64/0x70
<4> [251.353177] ? __warn+0x93/0x1a0
<4> [251.353189] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.353381] ? report_bug+0x171/0x1a0
<4> [251.353395] ? handle_bug+0x60/0xa0
<4> [251.353405] ? exc_invalid_op+0x18/0x70
<4> [251.353414] ? asm_exc_invalid_op+0x1b/0x20
<4> [251.353432] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.353661] ? xe_guc_sched_done_handler+0xa54/0xef0 [xe]
<4> [251.353847] ? lock_acquire+0xc5/0x2f0
<4> [251.353869] dequeue_one_g2h+0x51a/0x830 [xe]
<4> [251.354039] ? receive_g2h+0x47/0xf0 [xe]
<4> [251.354240] receive_g2h+0x4f/0xf0 [xe]
<4> [251.354490] g2h_worker_func+0x15/0x20 [xe]
<4> [251.354733] process_one_work+0x21c/0x730
<4> [251.354760] worker_thread+0x1db/0x3a0
<4> [251.354775] ? __pfx_worker_thread+0x10/0x10
<4> [251.354786] kthread+0xf3/0x130
<4> [251.354801] ? __pfx_kthread+0x10/0x10
<4> [251.354817] ret_from_fork+0x3a/0x60
<4> [251.354828] ? __pfx_kthread+0x10/0x10
<4> [251.354842] ret_from_fork_asm+0x1a/0x30
<4> [251.354871] </TASK>
<4> [251.354877] irq event stamp: 33303
<4> [251.354883] hardirqs last enabled at (33309): [<ffffffff811bcec8>] __up_console_sem+0x68/0x80
<4> [251.354899] hardirqs last disabled at (33314): [<ffffffff811bcead>] __up_console_sem+0x4d/0x80
<4> [251.354911] softirqs last enabled at (33208): [<ffffffff810f874d>] __irq_exit_rcu+0x7d/0xa0
<4> [251.354916] softirqs last disabled at (33197): [<ffffffff810f874d>] __irq_exit_rcu+0x7d/0xa0
<4> [251.354921] ---[ end trace 0000000000000000 ]---